<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:id="@+id/toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_grey_background"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:paddingLeft="3dp"
                android:text="@string/data_sheet_text"
                android:textColor="@color/black_text"
                android:textSize="@dimen/title_section_text_size" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/normal_padding"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/normal_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_name"
                            android:drawablePadding="@dimen/normal_padding"
                            android:fontFamily="monospace"
                            android:gravity="center_vertical"
                            android:text="@string/real_name_text"
                            android:textColor="@color/black_text"
                            android:textSize="@dimen/default_text_subtitle_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/real_name_value_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_content_value_left_margin"
                            android:ellipsize="end"
                            android:fontFamily="monospace"
                            android:maxLines="1"
                            android:textSize="@dimen/default_text_subtitle_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/mid_normal_padding"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_height"
                            android:drawablePadding="@dimen/normal_padding"
                            android:fontFamily="monospace"
                            android:gravity="center_vertical"
                            android:text="@string/height_text"
                            android:textColor="@color/black_text"
                            android:textSize="@dimen/default_text_subtitle_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/height_value_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_content_value_left_margin"
                            android:ellipsize="end"
                            android:fontFamily="monospace"
                            android:maxLines="1"
                            android:textSize="@dimen/default_text_subtitle_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/mid_normal_padding"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_power"
                            android:drawablePadding="@dimen/normal_padding"
                            android:fontFamily="monospace"
                            android:gravity="top"
                            android:text="@string/power_text"
                            android:textColor="@color/black_text"
                            android:textSize="@dimen/default_text_subtitle_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/power_value_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_content_value_left_margin"
                            android:fontFamily="monospace"
                            android:textSize="@dimen/default_text_subtitle_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/mid_normal_padding"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_ability"
                            android:drawablePadding="@dimen/normal_padding"
                            android:fontFamily="monospace"
                            android:gravity="top"
                            android:text="@string/ability_text"
                            android:textColor="@color/black_text"
                            android:textSize="@dimen/default_text_subtitle_size"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ability_value_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/detail_content_value_left_margin"
                            android:fontFamily="monospace"
                            android:textSize="@dimen/default_text_subtitle_size" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:fontFamily="monospace"
                android:paddingLeft="3dp"
                android:text="@string/groups_text"
                android:textColor="@color/black_text"
                android:textSize="@dimen/title_section_text_size" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_chip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
